objects/Marketing_Interaction__c.object
<CustomObject>
    <description>Object to track marketing online and trade show interactions for a client</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Interaction__c</fullName>
        <label>Date Of Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NADA_Swipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Swipe</label>
        <referenceTo>NADA_Swipe__c</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Show Attendee</label>
        <referenceTo>NADA_Attendees__c</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Digital_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Show Digital Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Show Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Interactions</relationshipLabel>
        <relationshipName>Marketing_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Interaction__c</fullName>
        <label>Type of Interaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Of_Interaction__c</columns>
        <columns>Type_of_Interaction__c</columns>
        <columns>Details__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Trade_Show_Attendee__c</columns>
        <columns>Trade_Show_Lead__c</columns>
        <columns>Trade_Show_Digital_Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Marketing Integration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>